add base stuff